--- a/style.css
+++ b/style.css
@@ -109,3 +109,28 @@
 .born {
   display: inline-block;
 }
+
+.gotopgtn{
+    position:fixed;
+    width: 50px;
+    height: 50px;
+    background: #27ae60;
+    text-decoration: none;
+    bottom: 40px;
+    right: 50px;
+}
+
+#scrolltotop{
+    position:fixed ;
+    right: 15px;
+    bottom: 15px;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background: white;
+    box-shadow: 0 0 10px black;
+    color: gray;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
