--- a/style.css
+++ b/style.css
@@ -63,6 +63,15 @@
   align-items: center;
 }
 
+.article:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
+}
+
+
 .project {
   background-image: url("/assets/img/project.jpg");
   background-size: 420px;
@@ -72,6 +81,14 @@
   align-items: center;
 }
 
+.project:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
+}
+
 .music {
   background-image: url("/assets/img/music.jpg");
   background-size: 420px;
@@ -79,6 +96,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.music:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
 }
 
 .btnnn {
@@ -141,15 +166,14 @@
   text-align: center;
 }
 
-.welcome{
+.welcome {
   position: relative;
   top: 255px;
   color: white;
-  font-size: 100px;
-  font-weight: 900;
+  font-size: 90px;
 }
 
-.musich{
+.musich {
   background-image: url("/assets/img/nomusic.jpg");
   background-size: 470px;
   border-radius: 2%;
