--- a/style.css
+++ b/style.css
@@ -152,11 +152,19 @@
 
 .articleh {
   background-image: url("/assets/img/articlepost.jpg");
-  background-size: 430px;
+  background-size: 600px;
   border-radius: 2%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.articleh:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
 }
 
 .head {
@@ -176,6 +184,23 @@
 .musich {
   background-image: url("/assets/img/nomusic.jpg");
   background-size: 470px;
+  border-radius: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.musich:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
+}
+
+.projecth{
+  background-image: url("/assets/img/project222.jpg");
+  background-size: 600px;
   border-radius: 2%;
   display: flex;
   justify-content: center;
