--- a/style.css
+++ b/style.css
@@ -168,9 +168,9 @@
 }
 
 .head {
+
   background-image: url("/assets/img/all2.jpg");
-  background-size: 100%;
-  height: 940px;
+  background-size: cover;
   text-align: center;
 }
 
@@ -206,3 +206,8 @@
   justify-content: center;
   align-items: center;
 }
+
+.foot{
+  margin-bottom: 10px;
+}
+
