--- a/style.css
+++ b/style.css
@@ -116,6 +116,18 @@
   align-items: center;
 }
 
+.articledate {
+  border: none;
+  background-color: white;
+  font-weight: bold;
+  width: 20ch;
+  height: 6ch;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 .down {
   background-color: rgb(207, 229, 238);
   height: 8ch;
@@ -167,6 +179,63 @@
   box-shadow: 0 0 10px black;
 }
 
+.articlebtn {
+  background-image: url("/assets/img/articlepost.jpg");
+  background-size: 600px;
+  font-size: 18px;
+  border-radius: 2%;
+  border:0;
+  width: 100%;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 50%;
+}
+
+.articlebtn:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
+}
+
+.musicbtn {
+  background-image: url("/assets/img/nomusic.jpg");
+  background-size: 470px;
+  font-size: 18px;
+  border-radius: 2%;
+  border:0;
+  width: 100%;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 50%;
+}
+
+.musicbtn:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
+}
+
+.art{
+  border: none;
+  background-color: white;
+  font-weight: bold;
+  width: 20ch;
+  height: 6ch;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
 .head {
 
   background-image: url("/assets/img/all2.jpg");
@@ -198,7 +267,7 @@
   box-shadow: 0 0 10px black;
 }
 
-.projecth{
+.projecth {
   background-image: url("/assets/img/project222.jpg");
   background-size: 600px;
   border-radius: 2%;
@@ -207,7 +276,6 @@
   align-items: center;
 }
 
-.foot{
+.foot {
   margin-bottom: 10px;
 }
-
