--- a/style.css
+++ b/style.css
@@ -184,8 +184,8 @@
   background-size: 600px;
   font-size: 18px;
   border-radius: 2%;
-  border:0;
-  width: 100%;
+  border: 0;
+  width: 95%;
   height: 350px;
   display: flex;
   justify-content: center;
@@ -206,7 +206,7 @@
   background-size: 470px;
   font-size: 18px;
   border-radius: 2%;
-  border:0;
+  border: 0;
   width: 100%;
   height: 350px;
   display: flex;
@@ -223,13 +223,13 @@
   box-shadow: 0 0 10px black;
 }
 
-.art{
+.art {
   border: none;
   background-color: white;
   font-weight: bold;
-  width: 20ch;
-  height: 6ch;
-  display: flex;
+  width: 25ch;
+  height: 8ch;
+
   justify-content: center;
   align-items: center;
 }
@@ -238,7 +238,8 @@
 
 .head {
 
-  background-image: url("/assets/img/all2.jpg");
+  background-image: url("/assets/img/aus2.jpg");
+  background-size: 555555px;
   background-size: cover;
   text-align: center;
 }
@@ -246,6 +247,7 @@
 .welcome {
   position: relative;
   top: 255px;
+  left: 430px;
   color: white;
   font-size: 90px;
 }
@@ -278,4 +280,84 @@
 
 .foot {
   margin-bottom: 10px;
+}
+
+.articlebtn2 {
+  background-image: url("/assets/img/coffee.jpg");
+  background-size: 350px;
+  font-size: 18px;
+  border-radius: 2%;
+  border: 0;
+  width: 100%;
+  height: 56%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.musicbtn2{
+  background-image: url("/assets/img/nomusic.jpg");
+  background-size: 390px;
+  font-size: 18px;
+  border-radius: 2%;
+  border: 0;
+  width: 100%;
+  height: 56%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.try {
+  width: 100%;
+  height: 44%;
+}
+
+.wrapping {
+  border: 1px;
+  border-style: solid;
+  border-radius: 2%;
+  border-color: rgb(226, 220, 220);
+  width: 95%;
+  height: 350px;
+}
+
+.wrapping:hover {
+  position: relative;
+  /* 當滑鼠經過超連結時，超連結往右下位移1像素 */
+  top: 1px;
+  left: 1px;
+  box-shadow: 0 0 10px black;
+}
+
+.author {
+  font-size: small;
+}
+
+.date {
+  font-size: small;
+  font-weight: bold;
+}
+
+.title {
+  font-weight: bold;
+  text-align: center;
+  color: rgb(31, 30, 30);
+}
+
+.title:hover{
+  text-decoration: underline;
+}
+
+.short:hover{
+  text-decoration: underline;
+}
+
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
 }
