--- a/style.css
+++ b/style.css
@@ -242,6 +242,7 @@
 
   height: 940px;
   width: 100%;
+
   background-size: cover;
 
 }
@@ -363,4 +364,8 @@
   'wght' 400,
   'GRAD' 0,
   'opsz' 48
+}
+
+html{
+  height: 100%;
 }
