--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   user-select: none;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
   .bd-placeholder-img-lg {
     font-size: 3.5rem;
   }
@@ -237,14 +237,12 @@
 
 
 .head {
-
   background-image: url("/assets/img/aus2.jpg");
-
-  height: 940px;
-  width: 100%;
-
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
-
+  width: 100%;
+  height: 940px;
 }
 
 .welcome {
@@ -364,8 +362,4 @@
   'wght' 400,
   'GRAD' 0,
   'opsz' 48
-}
-
-html{
-  width: 100%;
 }
